Applied upstream changes for release 4.4.0.
- See CHANGELOG for more details